# mgz-fast

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  python-publish.yml
mgz/: __init__.py  util.py
mgz/cli/: dump.py  extract.py  parse_body.py  parse_header.py
mgz/fast/: header.py
tests/recs/: de-67.2.aoe2record
